refactor: es logic (#32)
* refactor: es logic

* modify indices index name logic

* modify es query index name
