# api/http.swagger.json
@@ -348,6 +348,13 @@
             "in": "query",
             "required": false,
             "type": "string"
+          },
+          {
+            "name": "buckets",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "int64"
           }
         ],
         "tags": [
